[package]
name = "android_bp"
version = "0.2.0"
edition = "2021"
description = "Android.bp parser"
readme = "Readme.md"
repository = "https://github.com/tardyp/rs-bp"
homepage = "https://github.com/tardyp/rs-bp"
license = "MIT"
keywords = ["android", "bp", "parser", "blueprint", "soong"]
categories = ["parser-implementations"]
authors = ["tardyp"]

[lib]
name = "android_bp"

[dependencies]
nom = "7.1.3"
