[package]
name = "android_bp"
version = "0.3.0"
edition = "2021"
description = "Android.bp parser"
readme = "Readme.md"
repository = "https://github.com/tardyp/rs-bp"
homepage = "https://github.com/tardyp/rs-bp"
license = "MIT"
keywords = ["android", "bp", "parser", "blueprint", "soong"]
categories = ["parser-implementations"]
authors = ["tardyp"]

[lib]
name = "android_bp"

[dependencies]
nom = "7.1.3"
[dev-dependencies]
tar = "0.4.41"
liblzma = "0.3.2"

# put pyo3 in a workspace, so that rust-analyzer can find any incompatibility
[workspace]
resolver = "2"
members = [
    "pyo3"
]