[package]
name = "android_bp_pyo3"
version = "0.3.0"
edition = "2021"
description = "Android.bp parser"
readme = "Readme.md"
repository = "https://github.com/tardyp/rs-bp"
homepage = "https://github.com/tardyp/rs-bp"
license = "MIT"
keywords = ["android", "bp", "parser", "blueprint", "soong"]
categories = ["android", "parser"]
authors = ["tardyp"]

[lib]
# note that this does not clash with the upstream rust lib
# this make the output file name libandroid_bp.so, so that we can just import it in python with:
# import android_bp
name = "android_bp"
crate-type = ["cdylib"]

[dependencies]
android_bp = { path = ".." }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
