[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "android_bp"
requires-python = ">=3.8"
description = "A python module to parse Android.bp files"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "Readme.md"
license = "MIT"
keywords = ["android", "bp", "parser", "blueprint", "soong"]

dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
